// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AvatarMeetingsListItem /> snapshot should match snapshot 1`] = `
<AvatarMeetingsListItem>
  <ListItemBase
    className="md-avatar-meetings-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-avatar-meetings-list-item-wrapper md-list-item-base-wrapper"
          data-allow-text-select={false}
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onPointerDown={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  aria-hidden="false"
                  aria-label=""
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                  role="img"
                >
                  <Initials
                    className="md-avatar-wrapper-children"
                    initials="C"
                    type="person"
                  >
                    <span
                      aria-hidden="true"
                      className="md-avatar-wrapper-children"
                    >
                      C
                    </span>
                  </Initials>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-meetings-list-item-text-wrapper"
              data-position="middle"
            >
              <div>
                <Text
                  tagName="p"
                  type="body-primary"
                >
                  <Text
                    className="md-text-wrapper"
                    tagname="p"
                    type="body-large-regular"
                  >
                    <mdc-text
                      class="md-text-wrapper"
                      suppressHydrationWarning={true}
                    />
                  </Text>
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-meetings-list-item-actions-wrapper"
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarMeetingsListItem>
`;

exports[`<AvatarMeetingsListItem /> snapshot should match snapshot with avatarProps 1`] = `
<AvatarMeetingsListItem
  avatarProps={
    Object {
      "presence": "active",
      "title": "Cisco",
    }
  }
>
  <ListItemBase
    className="md-avatar-meetings-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-avatar-meetings-list-item-wrapper md-list-item-base-wrapper"
          data-allow-text-select={false}
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onPointerDown={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                presence="active"
                size={32}
                title="Cisco"
              >
                <div
                  aria-hidden="false"
                  aria-label=""
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                  role="img"
                >
                  <Initials
                    className="md-avatar-wrapper-children"
                    initials="C"
                    type="person"
                  >
                    <span
                      aria-hidden="true"
                      className="md-avatar-wrapper-children"
                    >
                      C
                    </span>
                  </Initials>
                  <Presence
                    isCircularWrapper={true}
                    presenceColor="var(--mds-color-theme-indicator-stable)"
                    presenceIcon="unread"
                    size={32}
                  >
                    <div
                      className="md-avatar-presence-icon-wrapper"
                      data-shape={true}
                    >
                      <Icon
                        fillColor="var(--mds-color-theme-indicator-stable)"
                        name="unread"
                        scale={14}
                        weight="filled"
                      >
                        <Icon
                          className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                          data-autoscale={false}
                          data-scale={14}
                          data-test="unread"
                          name="unread-filled"
                          style={
                            Object {
                              "--mdc-icon-fill-color": "var(--mds-color-theme-indicator-stable)",
                            }
                          }
                        >
                          <mdc-icon
                            class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                            data-autoscale={false}
                            data-scale={14}
                            data-test="unread"
                            style={
                              Object {
                                "--mdc-icon-fill-color": "var(--mds-color-theme-indicator-stable)",
                              }
                            }
                            suppressHydrationWarning={true}
                          />
                        </Icon>
                      </Icon>
                    </div>
                  </Presence>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-meetings-list-item-text-wrapper"
              data-position="middle"
            >
              <div>
                <Text
                  tagName="p"
                  type="body-primary"
                >
                  <Text
                    className="md-text-wrapper"
                    tagname="p"
                    type="body-large-regular"
                  >
                    <mdc-text
                      class="md-text-wrapper"
                      suppressHydrationWarning={true}
                    />
                  </Text>
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-meetings-list-item-actions-wrapper"
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarMeetingsListItem>
`;

exports[`<AvatarMeetingsListItem /> snapshot should match snapshot with className 1`] = `
<AvatarMeetingsListItem
  className="example-class"
>
  <ListItemBase
    className="example-class md-avatar-meetings-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="example-class md-avatar-meetings-list-item-wrapper md-list-item-base-wrapper"
          data-allow-text-select={false}
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onPointerDown={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  aria-hidden="false"
                  aria-label=""
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                  role="img"
                >
                  <Initials
                    className="md-avatar-wrapper-children"
                    initials="C"
                    type="person"
                  >
                    <span
                      aria-hidden="true"
                      className="md-avatar-wrapper-children"
                    >
                      C
                    </span>
                  </Initials>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-meetings-list-item-text-wrapper"
              data-position="middle"
            >
              <div>
                <Text
                  tagName="p"
                  type="body-primary"
                >
                  <Text
                    className="md-text-wrapper"
                    tagname="p"
                    type="body-large-regular"
                  >
                    <mdc-text
                      class="md-text-wrapper"
                      suppressHydrationWarning={true}
                    />
                  </Text>
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-meetings-list-item-actions-wrapper"
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarMeetingsListItem>
`;

exports[`<AvatarMeetingsListItem /> snapshot should match snapshot with displayMoreAction 1`] = `
<AvatarMeetingsListItem
  displayActions={
    Array [
      "more",
    ]
  }
>
  <ListItemBase
    className="md-avatar-meetings-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-avatar-meetings-list-item-wrapper md-list-item-base-wrapper"
          data-allow-text-select={false}
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onPointerDown={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  aria-hidden="false"
                  aria-label=""
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                  role="img"
                >
                  <Initials
                    className="md-avatar-wrapper-children"
                    initials="C"
                    type="person"
                  >
                    <span
                      aria-hidden="true"
                      className="md-avatar-wrapper-children"
                    >
                      C
                    </span>
                  </Initials>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-meetings-list-item-text-wrapper"
              data-position="middle"
            >
              <div>
                <Text
                  tagName="p"
                  type="body-primary"
                >
                  <Text
                    className="md-text-wrapper"
                    tagname="p"
                    type="body-large-regular"
                  >
                    <mdc-text
                      class="md-text-wrapper"
                      suppressHydrationWarning={true}
                    />
                  </Text>
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-meetings-list-item-actions-wrapper"
              data-position="end"
            >
              <ButtonCircle
                ghost={true}
                size={28}
              >
                <ButtonSimple
                  aria-disabled={false}
                  className="md-button-circle-wrapper"
                  data-color="primary"
                  data-disabled={false}
                  data-ghost={true}
                  data-inverted={false}
                  data-multiple-children={false}
                  data-outline={false}
                  data-shallow-disabled={false}
                  data-size={28}
                >
                  <FocusRing>
                    <FocusRing
                      focusClass="md-focus-ring-wrapper children"
                      focusRingClass="md-focus-ring-wrapper children"
                    >
                      <button
                        className="md-button-circle-wrapper md-button-simple-wrapper"
                        data-color="primary"
                        data-disabled={false}
                        data-ghost={true}
                        data-inverted={false}
                        data-multiple-children={false}
                        data-outline={false}
                        data-shallow-disabled={false}
                        data-size={28}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onDragStart={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchCancel={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        type="button"
                      >
                        <Icon
                          name="more"
                          scale={16}
                          weight="bold"
                        >
                          <Icon
                            className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                            data-autoscale={false}
                            data-scale={16}
                            data-test="more"
                            name="more-bold"
                            style={Object {}}
                          >
                            <mdc-icon
                              class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                              data-autoscale={false}
                              data-scale={16}
                              data-test="more"
                              style={Object {}}
                              suppressHydrationWarning={true}
                            />
                          </Icon>
                        </Icon>
                      </button>
                    </FocusRing>
                  </FocusRing>
                </ButtonSimple>
              </ButtonCircle>
            </div>
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarMeetingsListItem>
`;

exports[`<AvatarMeetingsListItem /> snapshot should match snapshot with displayMuteAction && !isMuted 1`] = `
<AvatarMeetingsListItem
  displayActions={
    Array [
      "mute",
    ]
  }
  isMuted={false}
>
  <ListItemBase
    className="md-avatar-meetings-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-avatar-meetings-list-item-wrapper md-list-item-base-wrapper"
          data-allow-text-select={false}
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onPointerDown={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  aria-hidden="false"
                  aria-label=""
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                  role="img"
                >
                  <Initials
                    className="md-avatar-wrapper-children"
                    initials="C"
                    type="person"
                  >
                    <span
                      aria-hidden="true"
                      className="md-avatar-wrapper-children"
                    >
                      C
                    </span>
                  </Initials>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-meetings-list-item-text-wrapper"
              data-position="middle"
            >
              <div>
                <Text
                  tagName="p"
                  type="body-primary"
                >
                  <Text
                    className="md-text-wrapper"
                    tagname="p"
                    type="body-large-regular"
                  >
                    <mdc-text
                      class="md-text-wrapper"
                      suppressHydrationWarning={true}
                    />
                  </Text>
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-meetings-list-item-actions-wrapper"
              data-position="end"
            >
              <ButtonCircle
                ghost={true}
                size={28}
              >
                <ButtonSimple
                  aria-disabled={false}
                  className="md-button-circle-wrapper"
                  data-color="primary"
                  data-disabled={false}
                  data-ghost={true}
                  data-inverted={false}
                  data-multiple-children={false}
                  data-outline={false}
                  data-shallow-disabled={false}
                  data-size={28}
                >
                  <FocusRing>
                    <FocusRing
                      focusClass="md-focus-ring-wrapper children"
                      focusRingClass="md-focus-ring-wrapper children"
                    >
                      <button
                        className="md-button-circle-wrapper md-button-simple-wrapper"
                        data-color="primary"
                        data-disabled={false}
                        data-ghost={true}
                        data-inverted={false}
                        data-multiple-children={false}
                        data-outline={false}
                        data-shallow-disabled={false}
                        data-size={28}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onDragStart={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchCancel={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        type="button"
                      >
                        <Icon
                          fillColor={false}
                          name="microphone-on"
                          scale={16}
                          weight="bold"
                        >
                          <Icon
                            className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                            data-autoscale={false}
                            data-scale={16}
                            data-test="microphone-on"
                            name="microphone-on-bold"
                            style={Object {}}
                          >
                            <mdc-icon
                              class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                              data-autoscale={false}
                              data-scale={16}
                              data-test="microphone-on"
                              style={Object {}}
                              suppressHydrationWarning={true}
                            />
                          </Icon>
                        </Icon>
                      </button>
                    </FocusRing>
                  </FocusRing>
                </ButtonSimple>
              </ButtonCircle>
            </div>
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarMeetingsListItem>
`;

exports[`<AvatarMeetingsListItem /> snapshot should match snapshot with displayMuteAction 1`] = `
<AvatarMeetingsListItem
  displayActions={
    Array [
      "mute",
    ]
  }
>
  <ListItemBase
    className="md-avatar-meetings-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-avatar-meetings-list-item-wrapper md-list-item-base-wrapper"
          data-allow-text-select={false}
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onPointerDown={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  aria-hidden="false"
                  aria-label=""
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                  role="img"
                >
                  <Initials
                    className="md-avatar-wrapper-children"
                    initials="C"
                    type="person"
                  >
                    <span
                      aria-hidden="true"
                      className="md-avatar-wrapper-children"
                    >
                      C
                    </span>
                  </Initials>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-meetings-list-item-text-wrapper"
              data-position="middle"
            >
              <div>
                <Text
                  tagName="p"
                  type="body-primary"
                >
                  <Text
                    className="md-text-wrapper"
                    tagname="p"
                    type="body-large-regular"
                  >
                    <mdc-text
                      class="md-text-wrapper"
                      suppressHydrationWarning={true}
                    />
                  </Text>
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-meetings-list-item-actions-wrapper"
              data-position="end"
            >
              <ButtonCircle
                ghost={true}
                size={28}
              >
                <ButtonSimple
                  aria-disabled={false}
                  className="md-button-circle-wrapper"
                  data-color="primary"
                  data-disabled={false}
                  data-ghost={true}
                  data-inverted={false}
                  data-multiple-children={false}
                  data-outline={false}
                  data-shallow-disabled={false}
                  data-size={28}
                >
                  <FocusRing>
                    <FocusRing
                      focusClass="md-focus-ring-wrapper children"
                      focusRingClass="md-focus-ring-wrapper children"
                    >
                      <button
                        className="md-button-circle-wrapper md-button-simple-wrapper"
                        data-color="primary"
                        data-disabled={false}
                        data-ghost={true}
                        data-inverted={false}
                        data-multiple-children={false}
                        data-outline={false}
                        data-shallow-disabled={false}
                        data-size={28}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onDragStart={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchCancel={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        type="button"
                      >
                        <Icon
                          fillColor="var(--mds-color-theme-text-error-normal)"
                          name="microphone-muted"
                          scale={16}
                          weight="bold"
                        >
                          <Icon
                            className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                            data-autoscale={false}
                            data-scale={16}
                            data-test="microphone-muted"
                            name="microphone-muted-bold"
                            style={
                              Object {
                                "--mdc-icon-fill-color": "var(--mds-color-theme-text-error-normal)",
                              }
                            }
                          >
                            <mdc-icon
                              class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                              data-autoscale={false}
                              data-scale={16}
                              data-test="microphone-muted"
                              style={
                                Object {
                                  "--mdc-icon-fill-color": "var(--mds-color-theme-text-error-normal)",
                                }
                              }
                              suppressHydrationWarning={true}
                            />
                          </Icon>
                        </Icon>
                      </button>
                    </FocusRing>
                  </FocusRing>
                </ButtonSimple>
              </ButtonCircle>
            </div>
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarMeetingsListItem>
`;

exports[`<AvatarMeetingsListItem /> snapshot should match snapshot with firstLine 1`] = `
<AvatarMeetingsListItem
  firstLine="firstLine"
>
  <ListItemBase
    className="md-avatar-meetings-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-avatar-meetings-list-item-wrapper md-list-item-base-wrapper"
          data-allow-text-select={false}
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onPointerDown={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  aria-hidden="false"
                  aria-label=""
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                  role="img"
                >
                  <Initials
                    className="md-avatar-wrapper-children"
                    initials="C"
                    type="person"
                  >
                    <span
                      aria-hidden="true"
                      className="md-avatar-wrapper-children"
                    >
                      C
                    </span>
                  </Initials>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-meetings-list-item-text-wrapper"
              data-position="middle"
            >
              <div>
                <Text
                  tagName="p"
                  type="body-primary"
                >
                  <Text
                    className="md-text-wrapper"
                    tagname="p"
                    type="body-large-regular"
                  >
                    <mdc-text
                      class="md-text-wrapper"
                      suppressHydrationWarning={true}
                    >
                      firstLine
                    </mdc-text>
                  </Text>
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-meetings-list-item-actions-wrapper"
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarMeetingsListItem>
`;

exports[`<AvatarMeetingsListItem /> snapshot should match snapshot with id 1`] = `
<AvatarMeetingsListItem
  id="example-id"
>
  <ListItemBase
    className="md-avatar-meetings-list-item-wrapper"
    id="example-id"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-avatar-meetings-list-item-wrapper md-list-item-base-wrapper"
          data-allow-text-select={false}
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          id="example-id"
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onPointerDown={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  aria-hidden="false"
                  aria-label=""
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                  role="img"
                >
                  <Initials
                    className="md-avatar-wrapper-children"
                    initials="C"
                    type="person"
                  >
                    <span
                      aria-hidden="true"
                      className="md-avatar-wrapper-children"
                    >
                      C
                    </span>
                  </Initials>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-meetings-list-item-text-wrapper"
              data-position="middle"
            >
              <div>
                <Text
                  tagName="p"
                  type="body-primary"
                >
                  <Text
                    className="md-text-wrapper"
                    tagname="p"
                    type="body-large-regular"
                  >
                    <mdc-text
                      class="md-text-wrapper"
                      suppressHydrationWarning={true}
                    />
                  </Text>
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-meetings-list-item-actions-wrapper"
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarMeetingsListItem>
`;

exports[`<AvatarMeetingsListItem /> snapshot should match snapshot with scheduler state = available 1`] = `
<AvatarMeetingsListItem
  schedulerState="available"
>
  <ListItemBase
    className="md-avatar-meetings-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-avatar-meetings-list-item-wrapper md-list-item-base-wrapper"
          data-allow-text-select={false}
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onPointerDown={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  aria-hidden="false"
                  aria-label=""
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                  role="img"
                >
                  <Initials
                    className="md-avatar-wrapper-children"
                    initials="C"
                    type="person"
                  >
                    <span
                      aria-hidden="true"
                      className="md-avatar-wrapper-children"
                    >
                      C
                    </span>
                  </Initials>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-meetings-list-item-text-wrapper"
              data-position="middle"
            >
              <Icon
                fillColor="var(--mds-color-theme-text-success-normal)"
                name="scheduler-available"
                scale={16}
                strokeColor="none"
                weight="bold"
              >
                <Icon
                  className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                  data-autoscale={false}
                  data-scale={16}
                  data-test="scheduler-available"
                  name="scheduler-available-bold"
                  strokeColor="none"
                  style={
                    Object {
                      "--mdc-icon-fill-color": "var(--mds-color-theme-text-success-normal)",
                    }
                  }
                >
                  <mdc-icon
                    class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                    data-autoscale={false}
                    data-scale={16}
                    data-test="scheduler-available"
                    strokeColor="none"
                    style={
                      Object {
                        "--mdc-icon-fill-color": "var(--mds-color-theme-text-success-normal)",
                      }
                    }
                    suppressHydrationWarning={true}
                  />
                </Icon>
              </Icon>
              <div>
                <Text
                  tagName="p"
                  type="body-primary"
                >
                  <Text
                    className="md-text-wrapper"
                    tagname="p"
                    type="body-large-regular"
                  >
                    <mdc-text
                      class="md-text-wrapper"
                      suppressHydrationWarning={true}
                    />
                  </Text>
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-meetings-list-item-actions-wrapper"
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarMeetingsListItem>
`;

exports[`<AvatarMeetingsListItem /> snapshot should match snapshot with scheduler state = quiet-hours 1`] = `
<AvatarMeetingsListItem
  schedulerState="quiet-hours"
>
  <ListItemBase
    className="md-avatar-meetings-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-avatar-meetings-list-item-wrapper md-list-item-base-wrapper"
          data-allow-text-select={false}
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onPointerDown={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  aria-hidden="false"
                  aria-label=""
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                  role="img"
                >
                  <Initials
                    className="md-avatar-wrapper-children"
                    initials="C"
                    type="person"
                  >
                    <span
                      aria-hidden="true"
                      className="md-avatar-wrapper-children"
                    >
                      C
                    </span>
                  </Initials>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-meetings-list-item-text-wrapper"
              data-position="middle"
            >
              <Icon
                fillColor="var(--mds-color-theme-text-secondary-normal)"
                name="scheduler-not-working-hours"
                scale={16}
                strokeColor="none"
                weight="bold"
              >
                <Icon
                  className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                  data-autoscale={false}
                  data-scale={16}
                  data-test="scheduler-not-working-hours"
                  name="scheduler-not-working-hours-bold"
                  strokeColor="none"
                  style={
                    Object {
                      "--mdc-icon-fill-color": "var(--mds-color-theme-text-secondary-normal)",
                    }
                  }
                >
                  <mdc-icon
                    class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                    data-autoscale={false}
                    data-scale={16}
                    data-test="scheduler-not-working-hours"
                    strokeColor="none"
                    style={
                      Object {
                        "--mdc-icon-fill-color": "var(--mds-color-theme-text-secondary-normal)",
                      }
                    }
                    suppressHydrationWarning={true}
                  />
                </Icon>
              </Icon>
              <div>
                <Text
                  tagName="p"
                  type="body-primary"
                >
                  <Text
                    className="md-text-wrapper"
                    tagname="p"
                    type="body-large-regular"
                  >
                    <mdc-text
                      class="md-text-wrapper"
                      suppressHydrationWarning={true}
                    />
                  </Text>
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-meetings-list-item-actions-wrapper"
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarMeetingsListItem>
`;

exports[`<AvatarMeetingsListItem /> snapshot should match snapshot with scheduler state = unavailable 1`] = `
<AvatarMeetingsListItem
  schedulerState="unavailable"
>
  <ListItemBase
    className="md-avatar-meetings-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-avatar-meetings-list-item-wrapper md-list-item-base-wrapper"
          data-allow-text-select={false}
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onPointerDown={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  aria-hidden="false"
                  aria-label=""
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                  role="img"
                >
                  <Initials
                    className="md-avatar-wrapper-children"
                    initials="C"
                    type="person"
                  >
                    <span
                      aria-hidden="true"
                      className="md-avatar-wrapper-children"
                    >
                      C
                    </span>
                  </Initials>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-meetings-list-item-text-wrapper"
              data-position="middle"
            >
              <Icon
                fillColor="var(--mds-color-theme-text-warning-normal)"
                name="scheduler-unavailable"
                scale={16}
                strokeColor="none"
                weight="bold"
              >
                <Icon
                  className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                  data-autoscale={false}
                  data-scale={16}
                  data-test="scheduler-unavailable"
                  name="scheduler-unavailable-bold"
                  strokeColor="none"
                  style={
                    Object {
                      "--mdc-icon-fill-color": "var(--mds-color-theme-text-warning-normal)",
                    }
                  }
                >
                  <mdc-icon
                    class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                    data-autoscale={false}
                    data-scale={16}
                    data-test="scheduler-unavailable"
                    strokeColor="none"
                    style={
                      Object {
                        "--mdc-icon-fill-color": "var(--mds-color-theme-text-warning-normal)",
                      }
                    }
                    suppressHydrationWarning={true}
                  />
                </Icon>
              </Icon>
              <div>
                <Text
                  tagName="p"
                  type="body-primary"
                >
                  <Text
                    className="md-text-wrapper"
                    tagname="p"
                    type="body-large-regular"
                  >
                    <mdc-text
                      class="md-text-wrapper"
                      suppressHydrationWarning={true}
                    />
                  </Text>
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-meetings-list-item-actions-wrapper"
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarMeetingsListItem>
`;

exports[`<AvatarMeetingsListItem /> snapshot should match snapshot with scheduler state = unknown 1`] = `
<AvatarMeetingsListItem
  schedulerState="unknown"
>
  <ListItemBase
    className="md-avatar-meetings-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-avatar-meetings-list-item-wrapper md-list-item-base-wrapper"
          data-allow-text-select={false}
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onPointerDown={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  aria-hidden="false"
                  aria-label=""
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                  role="img"
                >
                  <Initials
                    className="md-avatar-wrapper-children"
                    initials="C"
                    type="person"
                  >
                    <span
                      aria-hidden="true"
                      className="md-avatar-wrapper-children"
                    >
                      C
                    </span>
                  </Initials>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-meetings-list-item-text-wrapper"
              data-position="middle"
            >
              <Icon
                fillColor="var(--mds-color-theme-text-error-normal)"
                name="scheduler-unknown"
                scale={16}
                strokeColor="none"
                weight="bold"
              >
                <Icon
                  className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                  data-autoscale={false}
                  data-scale={16}
                  data-test="scheduler-unknown"
                  name="scheduler-unknown-bold"
                  strokeColor="none"
                  style={
                    Object {
                      "--mdc-icon-fill-color": "var(--mds-color-theme-text-error-normal)",
                    }
                  }
                >
                  <mdc-icon
                    class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                    data-autoscale={false}
                    data-scale={16}
                    data-test="scheduler-unknown"
                    strokeColor="none"
                    style={
                      Object {
                        "--mdc-icon-fill-color": "var(--mds-color-theme-text-error-normal)",
                      }
                    }
                    suppressHydrationWarning={true}
                  />
                </Icon>
              </Icon>
              <div>
                <Text
                  tagName="p"
                  type="body-primary"
                >
                  <Text
                    className="md-text-wrapper"
                    tagname="p"
                    type="body-large-regular"
                  >
                    <mdc-text
                      class="md-text-wrapper"
                      suppressHydrationWarning={true}
                    />
                  </Text>
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-meetings-list-item-actions-wrapper"
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarMeetingsListItem>
`;

exports[`<AvatarMeetingsListItem /> snapshot should match snapshot with secondLine 1`] = `
<AvatarMeetingsListItem
  secondLine="secondLine"
>
  <ListItemBase
    className="md-avatar-meetings-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-avatar-meetings-list-item-wrapper md-list-item-base-wrapper"
          data-allow-text-select={false}
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onPointerDown={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  aria-hidden="false"
                  aria-label=""
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                  role="img"
                >
                  <Initials
                    className="md-avatar-wrapper-children"
                    initials="C"
                    type="person"
                  >
                    <span
                      aria-hidden="true"
                      className="md-avatar-wrapper-children"
                    >
                      C
                    </span>
                  </Initials>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-meetings-list-item-text-wrapper"
              data-position="middle"
            >
              <div>
                <Text
                  tagName="p"
                  type="body-primary"
                >
                  <Text
                    className="md-text-wrapper"
                    tagname="p"
                    type="body-large-regular"
                  >
                    <mdc-text
                      class="md-text-wrapper"
                      suppressHydrationWarning={true}
                    />
                  </Text>
                </Text>
                <Text
                  tagName="small"
                  type="body-secondary"
                >
                  <Text
                    className="md-text-wrapper"
                    tagname="small"
                    type="body-midsize-regular"
                  >
                    <mdc-text
                      class="md-text-wrapper"
                      suppressHydrationWarning={true}
                    >
                      secondLine
                    </mdc-text>
                  </Text>
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-meetings-list-item-actions-wrapper"
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarMeetingsListItem>
`;

exports[`<AvatarMeetingsListItem /> snapshot should match snapshot with style 1`] = `
<AvatarMeetingsListItem
  style={
    Object {
      "color": "pink",
    }
  }
>
  <ListItemBase
    className="md-avatar-meetings-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-avatar-meetings-list-item-wrapper md-list-item-base-wrapper"
          data-allow-text-select={false}
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onPointerDown={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          style={
            Object {
              "color": "pink",
            }
          }
          tabIndex={0}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  aria-hidden="false"
                  aria-label=""
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                  role="img"
                >
                  <Initials
                    className="md-avatar-wrapper-children"
                    initials="C"
                    type="person"
                  >
                    <span
                      aria-hidden="true"
                      className="md-avatar-wrapper-children"
                    >
                      C
                    </span>
                  </Initials>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-meetings-list-item-text-wrapper"
              data-position="middle"
            >
              <div>
                <Text
                  tagName="p"
                  type="body-primary"
                >
                  <Text
                    className="md-text-wrapper"
                    tagname="p"
                    type="body-large-regular"
                  >
                    <mdc-text
                      class="md-text-wrapper"
                      suppressHydrationWarning={true}
                    />
                  </Text>
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-meetings-list-item-actions-wrapper"
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarMeetingsListItem>
`;
